# cbd

./: CMakeLists.txt  Makefile  a.out  anime.xpm  anime_wall_gop_.xpm  anime_wall_rez.xpm  conditions_for_sprt.c  cub.cub  cub.h  cub3D  cube3D  e_wall.xpm  game_loop.c  general_utils.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  hook_move.c  main.c  main_check_&_init.c  main_check_argv_and_init.c  map_valid.c  map_valid0.c  map_valid1.c  map_valid2.c  preprocess.c  preprocess_cardinal_points.c  preprocess_map.c  preprocess_rgb.c  render_wall_back.c  save.c  sp_anime.xpm  sprt.c  t.txt  utils.c  utils2.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
lb/: Makefile  ft_strchr.c  ft_strdup.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  libft.h
sprt_tex/: sprt_enot.xpm  sprt_tyan1.xpm  sprt_tyan2.xpm  sprt_tyan3.xpm
tex/: Rgmf720lJl0.xpm  jp1.xpm  jp2.xpm  jp3.xpm  jp4.xpm  jp5.xpm  nojki5.xpm  wall_pink_tyan3.xpm
wall_tex/: __lapa.xpm  barrel.xpm  greystone.xpm  jp6.xpm  kit.xpm  lapa.xpm  mossy.xpm  nojki1.xpm  nojki2.xpm  nojki3.xpm  nojki4.xpm  nojki6.xpm  purplestone.xpm  rez.xpm  test_tex.txt  wall_pink_tyan1.xpm  wall_pink_tyan2.xpm  wall_pink_tyan4.xpm  wave_of_kaganav1.xpm  wave_of_kaganav2.xpm  wave_of_kaganav3.xpm  wave_of_kaganav4.xpm
